--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "redux-async-actions",
   "version": "0.0.1",
   "description": "simple interface for dealing with async actions in Redux",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "babel --source-maps -d lib/ src/",
+    "prepublish": "npm run compile"
   },
   "repository": {
     "type": "git",
@@ -28,5 +30,9 @@
   "bugs": {
     "url": "https://github.com/davidkearns/redux-async-actions/issues"
   },
-  "homepage": "https://github.com/davidkearns/redux-async-actions#readme"
+  "homepage": "https://github.com/davidkearns/redux-async-actions#readme",
+  "devDependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0"
+  }
 }
