--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "name": "David Kearns",
     "url": "https://github.com/davidkearns"
   },
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/davidkearns/redux-async-actions/issues"
   },
